--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     }
 
     h1 {
-      margin: 10px 0;
-      font-size: 1.5rem;
+      margin: 20px 0;
+      font-size: 2.5rem;
     }
 
     /* セクション切り替え */
@@ -32,7 +32,7 @@
     /* 最初は initial-section を表示 */
     #initial-section {
       display: block;
-      margin-top: 10px;
+      margin-top: 20px;
     }
 
     /* おみくじ箱画像 */
@@ -95,7 +95,7 @@
       width: 1920px;
       height: 1080px;
       margin: 20px auto; /* 画面中央寄せ */
-      transform: scale(0.4);   /* ここを変えると縮小率が変わる(0.4→約40%) */
+      transform: scale(0.8);   /* ここを変えると縮小率が変わる(0.4→約40%) */
       transform-origin: top left;
       /* scaleした時にはみ出しを隠すため overflow: hidden; は付けずにOK */
     }
@@ -118,7 +118,7 @@
     /* 大吉、メッセージ、開運の位置・サイズを小さめに */
     #fortune {
       color: #ef5411;
-      font-size: 10rem;    /* 小さめに設定 */
+      font-size: 40rem;    /* 小さめに設定 */
       margin-top: 20px;
       margin-bottom: 5px;
       line-height: 1;
@@ -128,16 +128,16 @@
       flex: 1;           /* 上下の隙間を詰める */
       width: 80%;
       margin: 0 auto;
-      font-size: 2.6rem; /* 文字も小さめ */
+      font-size: 8.6rem; /* 文字も小さめ */
       color: #153f74;    
-      line-height: 1.2;  
+      line-height: 2.4;  
       overflow-y: auto;  
       text-align: center;
     }
 
     .omikuji-footer {
       color: #153f74;
-      font-size: 7rem;
+      font-size: 20rem;
       margin-bottom: 10px;
     }
 
@@ -151,7 +151,7 @@
 </head>
 <body>
 
-  <h1>大吉おみくじ（小さめ表示・画像は1920×1080）</h1>
+  <h1>大吉おみくじ</h1>
 
   <!-- 初期画面 -->
   <div id="initial-section">
