--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
       width: 1920px;
       height: 1080px;
       margin: 20px auto; /* 画面中央寄せ */
-      transform: scale(0.8);   /* ここを変えると縮小率が変わる(0.4→約40%) */
-      transform-origin: top left;
+      transform: scale(0.6);   /* ここを変えると縮小率が変わる(0.4→約40%) */
+      transform-origin: top center;
       /* scaleした時にはみ出しを隠すため overflow: hidden; は付けずにOK */
     }
 
