--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>大吉おみくじ</title>
-  <!-- Google Fonts: Sawarabi Mincho（和風っぽさ） -->
+  <title>大吉おみくじ（画像だけ表示）</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Sawarabi+Mincho:wght@700&display=swap" rel="stylesheet">
 
@@ -16,24 +15,24 @@
       text-align: center;
       color: #3b1a1a;
     }
+
     h1 {
-      margin: 20px 0;
-      font-size: 2.5rem;
+      margin: 20px;
+      font-size: 2rem;
     }
 
-    /* セクション切り替え */
-    #initial-section, 
-    #omikuji-section, 
+    /* 遷移用のセクション */
+    #initial-section,
+    #omikuji-section,
     #result-section {
       display: none;
     }
     /* 最初は initial-section を表示 */
     #initial-section {
       display: block;
-      margin-top: 20px;
     }
 
-    /* おみくじ箱画像 */
+    /* おみくじ箱 */
     #omikujiImage {
       width: 200px;
       cursor: pointer;
@@ -43,7 +42,19 @@
       transform: scale(1.05);
     }
 
-    /* おみくじ振るアニメ */
+    /* クリック時に左右にシェイク */
+    .shakeLR {
+      animation: shakeLR 0.4s ease-in-out;
+    }
+    @keyframes shakeLR {
+      0%   { transform: translateX(0); }
+      25%  { transform: translateX(-8px); }
+      50%  { transform: translateX(0); }
+      75%  { transform: translateX(8px); }
+      100% { transform: translateX(0); }
+    }
+
+    /* 振ってるときのアニメ (上下) */
     #omikujiShakeImage {
       width: 200px;
       animation: shakeUD 2s ease-in-out;
@@ -54,17 +65,6 @@
       50%  { transform: translateY(0);   }
       75%  { transform: translateY(10px);  }
       100% { transform: translateY(0);   }
-    }
-    /* クリック時の左右シェイク */
-    .shakeLR {
-      animation: shakeLR 0.4s ease-in-out;
-    }
-    @keyframes shakeLR {
-      0%   { transform: translateX(0); }
-      25%  { transform: translateX(-8px); }
-      50%  { transform: translateX(0); }
-      75%  { transform: translateX(8px); }
-      100% { transform: translateX(0); }
     }
 
     /* ボタン */
@@ -84,32 +84,31 @@
       background: #8c3e15;
     }
 
-    /* おみくじ結果をキャプチャする要素
-       1920:1080 と同じ 16:9 比率で、ここでは 960×540 に */
+    /* ここで結果を作るが、ユーザーには表示しない */
     #capture-area {
-      width: 960px;       /* 横長に設定 */
-      height: 540px;      /* 16:9 の比率 */
+      display: none; /* ここがポイント：画面に見せない */
+      width: 960px;   /* 16:9 横長：縮小版の1920×1080 */
+      height: 540px;
       background: #fff;
-      border: 6px solid #153f74; /* 紺色の枠 */
+      border: 6px solid #153f74; 
       box-sizing: border-box;
-      margin: 0 auto;             /* 中央寄せ */
+      position: relative;
+      padding: 10px;
 
+      /* Flexレイアウトで真ん中に配置 */
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      position: relative;
-      padding: 10px;
     }
 
-    /* 大吉、メッセージ、開運の配置 */
+    /* 大吉・メッセージ・開運 */
     #fortune {
       color: #ef5411;          
       font-size: 7rem;         
       margin: 10px 0;
       line-height: 1;
     }
-
     #message {
       white-space: pre-wrap;
       word-break: break-word;
@@ -120,34 +119,23 @@
       text-align: center;
       max-width: 90%;
     }
-
     .omikuji-footer {
       color: #153f74;
       font-size: 4rem;
       margin: 10px 0;
     }
 
-    /* 結果画面 */
-    #result-section {
-      margin-bottom: 20px;
-    }
-
-    /* 生成した画像の表示を小さめに */
+    /* 結果画像を表示する */
     #preview-container img {
-      max-width: 600px;  /* ページ内でのプレビューはこのくらいに縮小 */
+      max-width: 800px; /* ページに表示するときは縮小して見やすく */
       border: 1px solid #ccc;
-      margin-top: 10px;
-    }
-
-    /* ボタン類を配置するコンテナ */
-    #buttons-container {
-      margin-top: 10px;
+      margin-top: 20px;
     }
   </style>
 </head>
 <body>
 
-  <h1>大吉おみくじ</h1>
+  <h1>大吉おみくじ（画像だけ）</h1>
 
   <!-- 初期画面 -->
   <div id="initial-section">
@@ -155,29 +143,25 @@
     <img id="omikujiImage" src="omikuji.png" alt="おみくじ箱">
   </div>
 
-  <!-- 振っている最中の画面 -->
+  <!-- 振ってる画面 -->
   <div id="omikuji-section">
     <img id="omikujiShakeImage" src="omikuji.png" alt="振っているおみくじ箱">
     <p>おみくじを振っています…</p>
   </div>
 
-  <!-- 結果表示 & 画像プレビュー -->
+  <!-- 結果画面 -->
   <div id="result-section">
-    <!-- おみくじの結果（16:9比率で 960×540） -->
-    <div id="capture-area">
-      <div id="fortune">大吉</div>
-      <div id="message"></div>
-      <div class="omikuji-footer">開運</div>
-    </div>
-
-    <!-- 生成した画像を表示する部分 -->
+    <!-- ユーザーには文字を見せず、画像のみ -->
     <div id="preview-container"></div>
+    <button id="tweetButton">ツイート</button>
+    <button id="retryButton">もう一度引く</button>
+  </div>
 
-    <!-- ボタン類（ツイート＆もう一度引く） -->
-    <div id="buttons-container">
-      <button id="tweetButton">ツイート</button>
-      <button id="retryButton">もう一度引く</button>
-    </div>
+  <!-- ここで “大吉, メッセージ, 開運” を合成する -->
+  <div id="capture-area">
+    <div id="fortune">大吉</div>
+    <div id="message"></div>
+    <div class="omikuji-footer">開運</div>
   </div>
 
   <!-- html2canvas ライブラリ -->
@@ -196,26 +180,21 @@
 
     // 大吉メッセージ
     const daikichiMessages = [
-      "助けた人が石油王で、明日の朝起きたら銀行口座に300兆円が振り込まれているかも（もちろん非課税）！",
-      "急に流行ったゲームで隠されすぎた才能が発覚、世界の脚光を浴びるかも。ひょっとしたらeスポーツで億万長者に！？",
-      "かわいいは正義すぎて、あなたの笑顔だけで世界中の紛争が終結し、ノーベル平和賞を受賞するかも。すごすぎる！",
-      "常に逆かえる化現象が発生してモテモテになる“謎のギフト”を与えられるかも。誰もがあなたに惚れちゃう！",
-      "実はあなたの不運が多すぎるバグが発覚し、運営から詑(わ)び幸運とアップデートが無限に提供されるかも…？",
-      "去年何気なく書いたメモが史上最高のビジネスプランとして認定され、各界投資家から資金が殺到するかも！",
-      "どんな宝くじを買っても連続で当せんし、人生が秒で激変してしまうかも。笑いが止まりません！",
-      "ふと書いたブログ記事が絶大な反響を呼び、新たなムーブメントの火付け役として世界に名を轟かせるかも…！",
-      "絵が苦手と思いきや、世界的大画家の才能を秘めていると判明し、オークションで億単位の落札が続出するかも！",
-      "食べるだけで周囲に幸せオーラが出る魔法の胃袋をゲット！何を食べてもゼロカロリーかも！？",
-      "何気なく口ずさんだ鼻歌が海外で大流行、各国語のカバーアルバムが次々発売され印税生活まっしぐら！",
-      "近所の神社にお参りしたら、神様が個人的にあなたを推してくれるようになり、奇跡が起こりまくるかも！",
-      "出かけた先で運命的出会いがあり、一瞬で恋も財産も手に入りそう。なんという神展開！",
-      "SNSに投稿した写真が史上最大のバズを記録し、超VIPから直接スカウトされ億単位のオファーが来るかも！"
+      "助けた人が石油王で、明日の朝起きたら銀行口座に300兆円が振り込まれているかも（非課税）！",
+      "すべての不幸を解決する影武者がいて、残る試練はあなたの成長だけ。",
+      "かわいいは正義すぎて、あなたの笑顔だけで世界中の紛争が終結し、ノーベル平和賞かも！",
+      "実はあなたの不運は多すぎるバグだったらしく、運営が詫び幸運を配布するかも…",
+      "急に流行ったゲームで隠された才能が発覚し、世界があなたを求めて大騒ぎ！",
+      "部屋を片付けるだけで開運が炸裂し、行く先々で奇跡が起こるかも。",
+      "SNSにアップした写真が史上最大のバズを記録し、億単位のオファーが殺到！",
+      "食べるだけで周囲に幸せオーラを振りまく魔法の胃袋をゲット！何を食べても太らない！",
+      "仕事も恋愛も一気にうまくいき、周りから羨望のまなざしを浴びまくるかも！",
+      "いつの間にか天才的なアイデアが降ってきて、新発明で一攫千金の予感！"
     ];
 
-    // おみくじ箱クリック → シェイク → 振っている画面 → 結果表示
+    // おみくじ箱クリック → 振ってる画面 → 結果
     omikujiImage.addEventListener('click', () => {
       omikujiImage.classList.add('shakeLR');
-      // 1秒後に振ってる画面へ
       setTimeout(() => {
         initialSection.style.display = 'none';
         omikujiSection.style.display = 'block';
@@ -227,17 +206,17 @@
         omikujiSection.style.display = 'none';
         resultSection.style.display = 'block';
 
-        // ランダムにメッセージを設定
+        // ランダムメッセージ
         fortuneEl.textContent = "大吉";
         const idx = Math.floor(Math.random() * daikichiMessages.length);
         messageEl.textContent = daikichiMessages[idx];
 
-        // 結果が表示されたら、自動的にhtml2canvasで画像生成 → 画面表示
+        // HTML2Canvasで画像を生成
         const captureArea = document.getElementById('capture-area');
         const canvas = await html2canvas(captureArea);
         const dataUrl = canvas.toDataURL("image/png");
 
-        // プレビューを表示
+        // 画像のみをプレビュー表示
         const newImg = document.createElement('img');
         newImg.src = dataUrl;
         previewContainer.innerHTML = "";
@@ -246,9 +225,10 @@
       }, 3000);
     });
 
-    // ツイートボタン（テキストのみ）
+    // ツイート (テキストのみ)
     tweetButton.addEventListener('click', () => {
-      const text = `【大吉】\n${messageEl.textContent}\n`;
+      // 文字は見せていないが、内部的に持っている messageEl.textContent
+      const text = `【大吉】\n${messageEl.textContent}\n https://390juggler.github.io/daikichi/ #大吉くじ`;
       const tweetUrl = "https://twitter.com/intent/tweet?text=" + encodeURIComponent(text);
       window.open(tweetUrl, "_blank");
     });
@@ -257,7 +237,7 @@
     retryButton.addEventListener('click', () => {
       resultSection.style.display = 'none';
       initialSection.style.display = 'block';
-      previewContainer.innerHTML = ""; // プレビューをクリア
+      previewContainer.innerHTML = "";
     });
   </script>
 </body>
