--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>大吉おみくじ（画像だけ表示）</title>
+  <title>大吉おみくじ（画像だけ）</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Sawarabi+Mincho:wght@700&display=swap" rel="stylesheet">
 
@@ -15,7 +15,6 @@
       text-align: center;
       color: #3b1a1a;
     }
-
     h1 {
       margin: 20px;
       font-size: 2rem;
@@ -54,7 +53,7 @@
       100% { transform: translateX(0); }
     }
 
-    /* 振ってるときのアニメ (上下) */
+    /* おみくじ振るアニメ (上下) */
     #omikujiShakeImage {
       width: 200px;
       animation: shakeUD 2s ease-in-out;
@@ -84,18 +83,25 @@
       background: #8c3e15;
     }
 
-    /* ここで結果を作るが、ユーザーには表示しない */
+    /* 結果画面で表示する画像プレビュー */
+    #preview-container img {
+      max-width: 600px; /* プレビュー用に縮小 */
+      border: 1px solid #ccc;
+      margin-top: 20px;
+    }
+
+    /* おみくじ結果を作るエリア (ユーザーに見せない) */
     #capture-area {
-      display: none; /* ここがポイント：画面に見せない */
-      width: 960px;   /* 16:9 横長：縮小版の1920×1080 */
+      position: absolute;
+      left: -9999px;  /* 画面外に飛ばす */
+      top: 0;
+      width: 960px;   /* 16:9 横長：1920×1080の縮小版 */
       height: 540px;
       background: #fff;
       border: 6px solid #153f74; 
       box-sizing: border-box;
-      position: relative;
       padding: 10px;
 
-      /* Flexレイアウトで真ん中に配置 */
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -124,18 +130,11 @@
       font-size: 4rem;
       margin: 10px 0;
     }
-
-    /* 結果画像を表示する */
-    #preview-container img {
-      max-width: 800px; /* ページに表示するときは縮小して見やすく */
-      border: 1px solid #ccc;
-      margin-top: 20px;
-    }
   </style>
 </head>
 <body>
 
-  <h1>大吉おみくじ（画像だけ）</h1>
+  <h1>大吉おみくじ（画像のみ表示）</h1>
 
   <!-- 初期画面 -->
   <div id="initial-section">
@@ -143,56 +142,67 @@
     <img id="omikujiImage" src="omikuji.png" alt="おみくじ箱">
   </div>
 
-  <!-- 振ってる画面 -->
+  <!-- 振っている最中の画面 -->
   <div id="omikuji-section">
     <img id="omikujiShakeImage" src="omikuji.png" alt="振っているおみくじ箱">
     <p>おみくじを振っています…</p>
   </div>
 
-  <!-- 結果画面 -->
+  <!-- 結果画面：画像だけプレビュー -->
   <div id="result-section">
-    <!-- ユーザーには文字を見せず、画像のみ -->
     <div id="preview-container"></div>
+    <!-- ツイートボタン＆リトライボタン -->
     <button id="tweetButton">ツイート</button>
     <button id="retryButton">もう一度引く</button>
   </div>
 
-  <!-- ここで “大吉, メッセージ, 開運” を合成する -->
+  <!-- ここに「大吉」「メッセージ」「開運」を合成 -->
   <div id="capture-area">
     <div id="fortune">大吉</div>
     <div id="message"></div>
     <div class="omikuji-footer">開運</div>
   </div>
 
-  <!-- html2canvas ライブラリ -->
+  <!-- html2canvas -->
   <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
   <script>
     const initialSection = document.getElementById('initial-section');
     const omikujiSection = document.getElementById('omikuji-section');
     const resultSection = document.getElementById('result-section');
+    const previewContainer = document.getElementById('preview-container');
 
     const omikujiImage = document.getElementById('omikujiImage');
     const fortuneEl = document.getElementById('fortune');
     const messageEl = document.getElementById('message');
-    const previewContainer = document.getElementById('preview-container');
     const tweetButton = document.getElementById('tweetButton');
     const retryButton = document.getElementById('retryButton');
 
+    // 「。」のあとで改行する関数
+    function autoLineBreak(str) {
+      // 全角「。」のあとに改行を入れる
+      // 例: "今日は晴れ。明日は雨。" → "今日は晴れ。\n明日は雨。\n"
+      return str.replace(/。/g, "。\n");
+    }
+
     // 大吉メッセージ
     const daikichiMessages = [
-      "助けた人が石油王で、明日の朝起きたら銀行口座に300兆円が振り込まれているかも（非課税）！",
-      "すべての不幸を解決する影武者がいて、残る試練はあなたの成長だけ。",
+      "助けた人が石油王で、明日の朝起きたら銀行口座に300兆円が振り込まれているかも（もちろん非課税）！",
+      "すべての不幸をこっそり解決する影武者がいて、あなたが経験する試練は成長のためのものだけかも。",
       "かわいいは正義すぎて、あなたの笑顔だけで世界中の紛争が終結し、ノーベル平和賞かも！",
-      "実はあなたの不運は多すぎるバグだったらしく、運営が詫び幸運を配布するかも…",
-      "急に流行ったゲームで隠された才能が発覚し、世界があなたを求めて大騒ぎ！",
+      "実はあなたの不運が多すぎるバグだったらしく、運営が詫び幸運を配布してくれるかも…？",
+      "急に流行ったゲームで隠された才能が発覚し、世界があなたを求めて大騒ぎになるかも。",
       "部屋を片付けるだけで開運が炸裂し、行く先々で奇跡が起こるかも。",
-      "SNSにアップした写真が史上最大のバズを記録し、億単位のオファーが殺到！",
-      "食べるだけで周囲に幸せオーラを振りまく魔法の胃袋をゲット！何を食べても太らない！",
-      "仕事も恋愛も一気にうまくいき、周りから羨望のまなざしを浴びまくるかも！",
-      "いつの間にか天才的なアイデアが降ってきて、新発明で一攫千金の予感！"
+      "SNSにアップした写真が史上最大のバズを記録し、億単位のオファーが殺到するかも！",
+      "食べるだけで周囲に幸せオーラを振りまく魔法の胃袋をゲット。何を食べても太らない！",
+      "仕事も恋愛も一気にうまくいき、周りから羨望のまなざしを浴びそう！",
+      "いつの間にか天才的なアイデアが降ってきて、新発明で一攫千金の予感。",
+      "人脈がいきなり広がって、世界中に友達ができるかも。新しい出会いが楽しみ！",
+      "なんとなくやっていた推し活が大成功し、推しから公式に感謝状をもらうかも。",
+      "SNSでつぶやいた一言が次世代の名言として歴史に刻まれるかも。",
+      "宝くじを買ったら全部当たるミラクル発生。もう働かなくても平気！？"
     ];
 
-    // おみくじ箱クリック → 振ってる画面 → 結果
+    // 1) 箱をクリック → シェイク → 2秒後に結果
     omikujiImage.addEventListener('click', () => {
       omikujiImage.classList.add('shakeLR');
       setTimeout(() => {
@@ -201,22 +211,24 @@
         omikujiImage.classList.remove('shakeLR');
       }, 1000);
 
-      // さらに2秒後(合計3秒後)に結果表示
+      // さらに2秒後(合計3秒後)に結果を表示
       setTimeout(async () => {
         omikujiSection.style.display = 'none';
         resultSection.style.display = 'block';
 
-        // ランダムメッセージ
+        // ランダムにメッセージを選択し、「。」のあとで改行
         fortuneEl.textContent = "大吉";
         const idx = Math.floor(Math.random() * daikichiMessages.length);
-        messageEl.textContent = daikichiMessages[idx];
+        const rawMsg = daikichiMessages[idx];
+        const formattedMsg = autoLineBreak(rawMsg);
+        messageEl.textContent = formattedMsg;
 
-        // HTML2Canvasで画像を生成
+        // キャプチャして画像化
         const captureArea = document.getElementById('capture-area');
         const canvas = await html2canvas(captureArea);
         const dataUrl = canvas.toDataURL("image/png");
 
-        // 画像のみをプレビュー表示
+        // 画像だけを画面に表示
         const newImg = document.createElement('img');
         newImg.src = dataUrl;
         previewContainer.innerHTML = "";
@@ -227,8 +239,8 @@
 
     // ツイート (テキストのみ)
     tweetButton.addEventListener('click', () => {
-      // 文字は見せていないが、内部的に持っている messageEl.textContent
-      const text = `【大吉】\n${messageEl.textContent}\n https://390juggler.github.io/daikichi/ #大吉くじ`;
+      // 「大吉 + メッセージ + URL + ハッシュタグ」をツイート
+      const text = `【大吉】\n${messageEl.textContent}\n\nhttps://390juggler.github.io/daikichi/ #大吉くじ`;
       const tweetUrl = "https://twitter.com/intent/tweet?text=" + encodeURIComponent(text);
       window.open(tweetUrl, "_blank");
     });
@@ -237,7 +249,7 @@
     retryButton.addEventListener('click', () => {
       resultSection.style.display = 'none';
       initialSection.style.display = 'block';
-      previewContainer.innerHTML = "";
+      previewContainer.innerHTML = ""; // 画像プレビューをクリア
     });
   </script>
 </body>
