--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 </head>
 <body>
 
-  <h1>大吉おみくじ（画像のみ表示）</h1>
+  <h1>大吉おみくじ！！！！！！</h1>
 
   <!-- 初期画面 -->
   <div id="initial-section">
@@ -182,6 +182,7 @@
       // 全角「。」のあとに改行を入れる
       // 例: "今日は晴れ。明日は雨。" → "今日は晴れ。\n明日は雨。\n"
       return str.replace(/。/g, "。\n");
+      return str.replace(/、/g, "\n");
     }
 
     // 大吉メッセージ
