--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
       return str.replace(/。/g, "。\n");
     }
 
-      function autoLineBreak(str) {
-      // 全角「。」のあとに改行を入れる
+      function autoLineBreak2(str) {
+      // 全角「、」のあとに改行を入れる
       // 例: "今日は晴れ。明日は雨。" → "今日は晴れ。\n明日は雨。\n"
       return str.replace(/、/g, "\n");
     }
