--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
     // 大吉メッセージ
     const daikichiMessages = [
-      "助けた人が石油王で、明日の朝起きたら銀行口座に300兆円が振り込まれているかも（もちろん非課税）！",
+      "助けた人が石油王で、明日の朝起きたら銀行口座に300兆円が振り込まれているかも。（もちろん非課税）！",
       "すべての不幸をこっそり解決する影武者がいて、あなたが経験する試練は成長のためのものだけかも。",
       "かわいいは正義すぎて、あなたの笑顔だけで世界中の紛争が終結し、ノーベル平和賞かも！",
       "実はあなたの不運が多すぎるバグだったらしく、運営が詫び幸運を配布してくれるかも…？",
